--- a/01-fundamentos-reactjs/src/components/Sidebar.module.css
+++ b/01-fundamentos-reactjs/src/components/Sidebar.module.css
@@ -14,6 +14,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: calc(1.5rem);
+}
+
+.avatar{
+  width:  calc(3rem + 12px);
+  height: calc(3rem + 12px);
+  border-radius: 0.625rem;
+  border: 0.25rem solid var(--gray-800);
+  outline: 0.125rem solid var(--green-500);
 }
 
 .sidebar footer{
