--- a/01-fundamentos-reactjs/src/components/Post.module.css
+++ b/01-fundamentos-reactjs/src/components/Post.module.css
@@ -91,6 +91,16 @@
   resize: none;
 }
 
+.commentForm footer{
+  visibility: hidden;
+  max-height: 0;
+}
+
+.commentForm:focus-within footer{
+  visibility: visible;
+  max-height: none;
+}
+
 .commentForm  button[type=submit] {
   padding: 1rem 1.5rem; 
   margin-top: 1rem;
@@ -101,6 +111,7 @@
   font-weight: bold;
   cursor: pointer;
   transition: background-color 0.1s;
+
 }
 
 .commentForm button[type=submit]:hover{
