--- a/01-fundamentos-reactjs/src/components/Comment.module.css
+++ b/01-fundamentos-reactjs/src/components/Comment.module.css
@@ -17,5 +17,57 @@
 .commentContent{
   background: var(--gray-700);
   border-radius: 0.5rem;
-  
+  padding: 1rem;
+}
+
+.commentContent header{
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+
+
+.authorAndTime strong{
+  display: block;
+  font-size: 0.875rem;
+  line-height: 1.6;
+}
+
+.authorAndTime time{
+  display: block;
+  font-size: 0.75rem;
+  line-height: 1.6;
+  color: var(--gray-400);
+
+}
+
+.commentContent header button{
+  background: transparent;
+  border: 0;
+  color: var(--gray-400);
+  cursor: pointer;
+  line-height: 0;
+  border-radius: 2px;
+  transition: all .2s ease;
+}
+
+.commentContent header button:hover{
+  color: var(--red-500);
+}
+
+.commentContent p{
+  margin-top: 1rem;
+  color: var(--gray-300);
+}
+
+.commentBox footer{
+  margin-top: 1rem;
+}
+
+.commentBox footer button{
+  background: transparent;
+  border: 0;
+  color: var(--gray-400);
+  cursor: pointer;
 }
