--- a/01-fundamentos-reactjs/src/components/Avatar.module.css
+++ b/01-fundamentos-reactjs/src/components/Avatar.module.css
@@ -1,4 +1,13 @@
 .avatar{
+  width:  3rem;
+  height: 3rem;
+  border-radius: 0.625rem;
+  margin-bottom: 1.2rem;
+
+}
+
+
+.avatarWithBorder{
   width:  calc(3rem + 12px);
   height: calc(3rem + 12px);
   border-radius: 0.625rem;
